syntax = "proto3";
package topology.rpc;
import "google/api/http.proto";
import "google/api/annotations.proto";

service Rpc {
	rpc subscribeCro    (SubscribeCroRequest    ) returns (SubscribeCroResponse    ) {
		option (google.api.http).get = "/topopology/cro/subscribe/{cro_id}";
	};
	rpc unsubscribeCro  (UnsubscribeCroRequest  ) returns (UnsubscribeCroRequest   ) {
		option (google.api.http).get = "/topopology/cro/subscribe/{cro_id}";
	};
	rpc getCroHashGraph (GetCroHashGraphRequest ) returns (GetCroHashGraphResponse ) {
		option (google.api.http).get = "/topopology/cro/subscribe/{cro_id}";
	};
}

message SubscribeCroRequest {
	string cro_id = 1;
}

message SubscribeCroResponse {
	// can return error codes if different than 0
	int return_code = 1;
}

message UnsubscribeCroRequest {
	string cro_id = 1;
}

message UnsubscribeCroResponse {
	// can return error codes if different than 0
	int return_code = 1;
}

message getCroHashGraphRequest {
	string cro_id = 1;
}

message getCroHashGraphResponse {
	// linearized vertices hashes
	repeated string vertices_hashes = 1;
}
